[tool.poetry]
name = "candle-lighting-scheduler"
version = "0.1.0"
description = ""
authors = ["Elad Asaf <Elad220@gmail.com>"]
readme = "README.md"
packages = [{include = "candle_lighting_scheduler"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
boto3 = "^1.26.99"
pytz = "^2023.3"
aws-lambda-powertools = "^2.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
